<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_popup_background"
    android:elevation="8dp"
    android:layout_margin="16dp">

    <!-- TextInputLayout untuk Nama Matkul -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/matkul" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TextInputLayout untuk Deskripsi -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout1"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_desk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/deskripsi"
            android:gravity="start"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Spinner untuk kategori -->
    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- EditText untuk menambah kategori baru -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutCategory"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Add Category"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Tombol untuk menambahkan kategori baru -->
    <Button
        android:id="@+id/btnSubmitCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Add Category"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Tombol submit untuk matkul -->
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/btnSubmitCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Tombol untuk menghapus kategori -->
    <Button
        android:id="@+id/btnDeleteCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Delete Category"
        app:layout_constraintTop_toBottomOf="@id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
